2019-02-23  Akira Kakuto  <kakuto@w32tex.org>

	* main.c: Support old compiler.
	* tfmread.c: Allocate one more byte for nbuff in tfmget().

2019-02-23  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* main.c, tfmread.c: Forbid invalid usages.
	  - Make sure the output TFM does not have the same
	    basename as the input TFM.
	  - Options -J, -U, -3, -H are useless in non-UCS mode,
	    throw a warning and ignore.
	  - Options -J and -U cannot be used at the same time,
	    throw an error.
	* version.h: Bump version.

2019-02-19  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* tfmread.c, tool.c: Avoid compiler warnings for fgetc().
	* tfmread.c, write.c: Security fix for too long file names.
	* write.c (writevfu): Removed unnecessary conditionals.
	Thanks to @ngothan for a report by covscan.
	https://github.com/TeX-Live/texlive-source/issues/11

2019-02-10  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* uniblock.c: Update references Unicode blocks Blocks-12.0.0.txt
	and CMap files.
	* COPYRIGHT: Update copyright years.
	* version.h: Bump version.

2019-01-23  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* makejvf.1: Add fallback TeX and LaTeX logos.

2018-08-18  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* tfmread.c: Do not check GLUEKERN table in non-enhanced mode.
	* version.h: Bump version.

2018-03-15  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* usrtable.c: Do not initialize CHARSET flag at
	continuous lines of a CHARSET entry.
	* version.h: Bump version.

2018-03-03  TANAKA Takuji  <ttk@t-lab.opal.ne.jp>

	* write.c: Add U+2329, U+232A, U+301A, U+301B, U+FE59..FE5E.
	* version.h: Bump version.

2018-02-23  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* main.c, makejvf.1: Improve help message and manual.
	* usrtable.c: Initialize CHARSET flag at other commands or an
	empty line. Make an error message more clear.
	* version.h: Bump version.

2018-02-17  Hironobu Yamashita  <h.y.acetaminophen@gmail.com>

	* write.c: Add U+301E.